After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662916 - Empathy keeps scrolling up
Empathy keeps scrolling up
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Contact List
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
: 671764 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-10-28 08:54 UTC by Bilal Shahid
Modified: 2012-03-12 12:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
individual_view_drag_end: remove the auto scroll (1.02 KB, patch)
2012-01-30 14:48 UTC, Guillaume Desmottes
committed Details | Review

Description Bilal Shahid 2011-10-28 08:54:24 UTC
Originally reported at:
  https://bugs.launchpad.net/bugs/880424

After moving a contact from one group to another by drag-n-drop this window keeps scrolling to the top - even if I try scrolling down.

ProblemType: Bug
DistroRelease: Ubuntu 11.10
Package: empathy 3.2.0-0ubuntu1
ProcVersionSignature: Ubuntu 3.0.0-12.20-generic 3.0.4
Uname: Linux 3.0.0-12-generic x86_64
NonfreeKernelModules: openafs nvidia
ApportVersion: 1.23-0ubuntu3
Architecture: amd64
Date: Sun Oct 23 18:05:06 2011
ExecutablePath: /usr/bin/empathy
InstallationMedia: Ubuntu 11.10 "Oneiric Ocelot" - Release amd64 (20111012)
SourcePackage: empathy
UpgradeStatus: No upgrade log present (probably fresh install)
Comment 1 Guillaume Desmottes 2011-10-28 09:11:34 UTC
Weird I never experienced such issue. Where was the source and destination of the DnD? ie, did you have to scroll during dragging?
Comment 2 Bilal Shahid 2011-10-28 09:17:09 UTC
I am able to reproduce this here is the vedio of the bug.you can see that when i move contact from down group(ungrouped) to upper group(favouraties) than the if i scroll down the window the window is moving to upward.here is the vedio
https://launchpadlibrarian.net/83889433/out-10.ogv
Comment 3 Guillaume Desmottes 2011-10-28 10:55:17 UTC
I didn't manage to reproduce this bug, maybe it's because Ubuntu's scrollbar hack.

Can you start empathy using "LIBOVERLAY_SCROLLBAR=0 empathy" (to get the normal bar) and retry?
Comment 4 Bilal Shahid 2011-10-28 14:25:03 UTC
i first use this LIBOVERLAY_SCROLLBAR=0 empathy in terminal and i am able to reproduce this but
when i kill the empathy  from monitor than i am not be able to reproduce this bug but the empathy's scroll bar was changed not like that which we have normal have.
can you tell me why is this problem is happening ? and how to overcome it.?
Comment 5 Bilal Shahid 2011-10-28 19:50:28 UTC
the reporter who has reported this bug in launchpad has commented this there..

 "doing the thing suggested in #7 made no difference. I can still reproduce the bug with the other scrollbar."
Comment 6 Bilal Shahid 2011-12-02 01:28:25 UTC
the same bug is also present in the 12.04.if we drag contacts from down list(ungrouped) to above list (personal) than it stats scroll bar to upward direction.
Comment 7 Nirbheek Chauhan 2012-01-24 10:00:30 UTC
I see it here on Gentoo with gtk+-3.3.8 and gtk+-3.2.2 as well, empathy-3.2.2

To reproduce it, you have to drop the contact very near to an edge (either uppermost, or lowermost) *while* the list is still scrolling. To stop it from auto-scrolling, just pick up and drop in-place any contact in the list.
Comment 8 Guillaume Desmottes 2012-01-30 14:48:03 UTC
Created attachment 206437 [details] [review]
individual_view_drag_end: remove the auto scroll

This ensures that we'll stop scrolling if the DnD operation hasn't been
completed.
Comment 9 Xavier Claessens 2012-01-30 17:30:06 UTC
+1
Comment 10 Guillaume Desmottes 2012-01-31 09:24:15 UTC
Attachment 206437 [details] pushed as 6048958 - individual_view_drag_end: remove the auto scroll
Comment 11 Guillaume Desmottes 2012-03-12 12:21:16 UTC
*** Bug 671764 has been marked as a duplicate of this bug. ***