individual_view_drag_end: remove the auto scroll

This ensures that we'll stop scrolling if the DnD operation hasn't been
completed.

https://bugzilla.gnome.org/show_bug.cgi?id=662916